@@ -3,6 +3,7 @@
 *
 
 - Added parameter ListenAddress to all services (server, web server, agent)
+- New possible value for UseInterfaceAliases - concatenate name with alias
 
 
 *
